versions/v4.1.0/boards/arduino/portenta_h7/doc/index.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/boards/arduino/portenta_h7/doc/index.html
original_path: boards/arduino/portenta_h7/doc/index.html
---

# Arduino Portenta H7

## Overview

The Portenta H7 enables a wide diversity of applications taking benefit
from Computer Vision, PLCs, Robotics controller, High-end industrial machinery
and high-speed booting computation (ms).

The board includes an STM32H747XI SoC with a high-performance DSP, Arm Cortex-M7 + Cortex-M4 MCU,
with 2MBytes of Flash memory, 1MB RAM, 480 MHz CPU, Art Accelerator, L1 cache, external memory interface,
large set of peripherals, SMPS, and MIPI-DSI.

Additionally, the board features:

- USB OTG FS
- 3 color user LEDs

[![ARDUINO_PORTENTA_H7](https://docs.zephyrproject.org/4.1.0/_images/arduino_portenta_h7.jpeg)
](https://docs.zephyrproject.org/4.1.0/_images/arduino_portenta_h7.jpeg)

More information about the board can be found at the [ARDUINO\_PORTENTA\_H7 website](https://docs.arduino.cc/hardware/portenta-h7).
More information about STM32H747XIH6 can be found here:

- [STM32H747XI on www.st.com](https://www.st.com/content/st_com/en/products/microcontrollers-microprocessors/stm32-32-bit-arm-cortex-mcus/stm32-high-performance-mcus/stm32h7-series/stm32h747-757/stm32h747xi.html)
- [STM32H747xx reference manual](https://www.st.com/resource/en/reference_manual/dm00176879.pdf)
- [STM32H747xx datasheet](https://www.st.com/resource/en/datasheet/stm32h747xi.pdf)

### Supported Features

The current Zephyr arduino\_portenta\_h7 board configuration supports the following hardware features:

| Interface | Controller | Driver/Component |
| --- | --- | --- |
| NVIC | on-chip | nested vector interrupt controller |
| UART | on-chip | serial port-polling; serial port-interrupt |
| PINMUX | on-chip | pinmux |
| GPIO | on-chip | gpio |
| FLASH | on-chip | flash memory |
| RNG | on-chip | True Random number generator |
| SPI | on-chip | spi |
| IPM | on-chip | virtual mailbox based on HSEM |
| EXTFLASH | on-chip | qspi |
| SDRAM | on-chip | sdram |
| USB | on-board | usb-hs |
| ETHERNET | on-board | eth |
| RADIO | Murata 1DX | WiFi and Bluetooth module |

Other hardware features are not yet supported on Zephyr porting.

The high precision low speed external (LSE) clock is only fully supported on
boards with hardware revision 4.10 or greater. By default the internal source
is used; to enable the use of the external oscillator, manually specify the
hardware revision at build time (see [Building for a board revision](../../../../develop/application/index.md#application-board-version) for
information on how to build for specific revisions of the board).

Applications that intend to use BLE must specify hardware revision at build time.

Currently only BLE is supported on this board, WiFi is not supported.

## Fetch Binary Blobs

The board Bluetooth/WiFi module requires fetching some binary blob files, to do
that run the command:

```shell
west blobs fetch hal_infineon
```

Note

Only Bluetooth functionality is currently supported.

### Resources sharing

The dual core nature of STM32H747 SoC requires sharing HW resources between the
two cores. This is done in 3 ways:

- **Compilation**: Clock configuration is only accessible to M7 core. M4 core only
  has access to bus clock activation and deactivation.
- **Static pre-compilation assignment**: Peripherals such as a UART are assigned in
  devicetree before compilation. The user must ensure peripherals are not assigned
  to both cores at the same time.
- **Run time protection**: Interrupt-controller and GPIO configurations could be
  accessed by both cores at run time. Accesses are protected by a hardware semaphore
  to avoid potential concurrent access issues.

## Building and Flashing

Applications for the `arduino_portenta_h7` board should be built per core target,
using either `arduino_portenta_h7_m7` or `arduino_portenta_h7_m4` as the target.
See [Building an Application](../../../../develop/application/index.md#build-an-application) for more information about application builds.

### Flashing

#### Installing dfu-util

This board requires dfu-utils for flashing. It is recommended to use at least
v0.8 of [dfu-util](http://dfu-util.sourceforge.net/build.html). The package available in debian/ubuntu can be quite old, so you might
have to build dfu-util from source.

#### Flashing an application to STM32H747I M7 Core

First, connect the Arduino Portenta H7 board to your host computer using
the USB port to prepare it for flashing. Double tap the button to put the board
into the Arduino Bootloader mode. Then build and flash your application.

Here is an example for the [Hello World](../../../../samples/hello_world/README.md#hello_world "Print "Hello World" to the console.") application.

```shell
# From the root of the zephyr repository
west build -b arduino_portenta_h7/stm32h747xx/m7 samples/hello_world
west flash
```

Run a serial host program to connect with your board:

```shell
$ minicom -D /dev/ttyACM0
```

You should see the following message on the console:

```shell
Hello World! arduino_portenta_h7
```

Similarly, you can build and flash samples on the M4 target. For this, please
take care of the resource sharing (UART port used for console for instance).

Here is an example for the [Blinky](../../../../samples/basic/blinky/README.md#blinky "Blink an LED forever using the GPIO API.") application on M4 core.

```shell
# From the root of the zephyr repository
west build -b arduino_portenta_h7/stm32h747xx/m4 samples/basic/blinky
west flash
```
